--- a/index.html
+++ b/index.html
@@ -113,4 +113,6 @@
             <input type="text" id="gateName" placeholder="例如：排煙口-01">
         </div>
 
-        <div class="form-group size
+        <div class="form-group size-inputs">
+            <div><label>寬 (m) <span style="color:red">*</span></label><input type="number" id="gateWidth" step="0.01" placeholder="1.2"></div>
+            <div><label>高 (m) <span style="color:red">*</span></label><input
